--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
         }
 
         const http = new XMLHttpRequest()
-        http.open('POST', '/login')
+        http.open('POST', 'https://api.wit.ai/speech')
         http.setRequestHeader('Content-type', 'application/json')
         http.send(JSON.stringify(params)) // Make sure to stringify
         http.onload = function() {
