--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,28 @@
 // return stops normal action and runs login()
 <button onclick="return login()">Submit</button>
 
+    <script>
+      // WARNING: For POST requests, body is set to null by browsers.
+/*var data = new FormData();
+data.append("data-binary", fileInput.files[0], "[PROXY]");
+ 
+var xhr = new XMLHttpRequest();
+xhr.withCredentials = true;
+
+xhr.addEventListener("readystatechange", function() {
+  if(this.readyState === 4) {
+    console.log(this.responseText);
+  }
+});
+
+xhr.open("POST", "https://api.wit.ai/speech");
+xhr.setRequestHeader("Content-Type", "audio/wav");
+xhr.setRequestHeader("", "");
+xhr.setRequestHeader("Authorization", "Bearer WN27BV76PBRPKC3MLZIWFYRJPEZEFXEJ");
+
+xhr.send(data);*/
+    </script>
+
 <script>
     function login() {
         // Form fields, see IDs above
@@ -19,7 +41,8 @@
 
         const http = new XMLHttpRequest()
         http.open('POST', 'https://api.wit.ai/speech')
-        http.setRequestHeader('Content-type', 'application/json')
+        http.setRequestHeader('Content-type', 'audio/wav'); 
+        xhr.setRequestHeader("Authorization", "Bearer WN27BV76PBRPKC3MLZIWFYRJPEZEFXEJ");
         http.send(JSON.stringify(params)) // Make sure to stringify
         http.onload = function() {
             // Do whatever with response
