--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@ xhr.send(data);*/
         const http = new XMLHttpRequest()
         http.open('POST', 'https://api.wit.ai/speech')
         http.setRequestHeader('Content-type', 'audio/wav'); 
-        xhr.setRequestHeader("Authorization", "Bearer WN27BV76PBRPKC3MLZIWFYRJPEZEFXEJ");
+        http.setRequestHeader("Authorization", "Bearer WN27BV76PBRPKC3MLZIWFYRJPEZEFXEJ");
         http.send(JSON.stringify(params)) // Make sure to stringify
         http.onload = function() {
             // Do whatever with response
